# WallSync

./: .gitignore  README.md  pyproject.toml
src/wallsync/: cli.py  config.py  credentials.json  database.py  db.py  hashing.py  indexer.py  models.py  stats.py  wallpaper_manager.py
src/wallsync/commands/: clean.py  config.py  delete.py  favorite.py  history.py  info.py  install.py  interval.py  login.py  next.py  pause.py  prev.py  repo.py  reset.py  resume.py  scan.py  stats.py  status.py  sync.py  tag.py  uninstall.py  upload.py
src/wallsync/platform/: paths.py  windows.py
src/wallsync/providers/: base.py  composite.py  gdrive.py  gdrive_public.py  local.py  mega.py
tests/: test_config.py  test_db.py  test_multi_repo.py  test_wallpaper_manager.py
